--- a/gb/23/6/23/n14021241.md
+++ b/gb/23/6/23/n14021241.md
@@ -1,41 +1,34 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>多伦多市长补选 七位候选人有哪些承诺？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14021607-0-1-600x400.jpg" />
 <h6>目前多伦多市长补选支持率最高的有七位候选人。图中从左至右：贝劳、布拉德福德、邹至蕙、弗雷、亨特、马特洛和桑德斯。（加通社）
 </h6>
 <hr>
-<p>【大纪元2023年06月23日】（大纪元记者楚方明<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>报导）6月26日（周一），多伦多市民将选出多伦多市长。以下是七位呼声最高的候选人有相关关键议题的计划和承诺。这七名候选人分别是（按姓氏排名）：贝劳（Ana Bail?o）、布拉德福德（Brad Bradford）、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%82%B9%E8%87%B3%E8%95%99.md#1">邹至蕙</a>（Olivia Chow）、弗雷（Anthony Furey）、亨特（Mitzie Hunter）、马特洛（Josh Matlow）和桑德斯（Mark Saunders）。本次<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%82%E9%95%BF%E8%A1%A5%E9%80%89.md#1">市长补选</a>市民关注的关键议题包括：市府资金成本、住房、公交和公共治安等。</p>
+<p>【大纪元2023年06月23日】（大纪元记者楚方明多伦多报导）6月26日（周一），多伦多市民将选出多伦多市长。以下是七位呼声最高的候选人有相关关键议题的计划和承诺。这七名候选人分别是（按姓氏排名）：贝劳（Ana Bail?o）、布拉德福德（Brad Bradford）、邹至蕙（Olivia Chow）、弗雷（Anthony Furey）、亨特（Mitzie Hunter）、马特洛（Josh Matlow）和桑德斯（Mark Saunders）。本次市长补选市民关注的关键议题包括：市府资金成本、住房、公交和公共治安等。</p>
 <h2>资金来源及成本</h2>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>运作各种服务的资金从哪里来？这是关键议题。</p>
-<p><strong>贝劳</strong></p>
+<p>多伦多运作各种服务的资金从哪里来？这是关键议题。</p>
 <p>贝劳承诺，将地税增幅保持在或低于通货膨胀率。</p>
-<p>贝劳表示，将为多伦多从其他级别政府争取新资助，包括将DVP和嘉甸拿高速公路的维护费用上传到安省，市府每年可节省2亿元。</p>
+<p>贝劳表示，将为多伦多从其它级别政府争取新资助，包括将DVP和嘉甸拿高速公路的维护费用上传到安省，市府每年可节省2亿元。</p>
 <p>贝劳估计其“修复TTC”计划将花费8,500万元，但她表示，这笔支出加上服务改进将使更多乘客重返公交系统。</p>
-<p>她说，她全面实施的住房计划将耗资4,850万美元，部分依赖城市建设基金的资金。</p>
-<p><strong>布拉德福德</strong></p>
+<p>她说，她全面实施的住房计划将耗资4,850万元，部分依赖城市建设基金的资金。</p>
 <p>布拉德福德承诺，将地税增幅保持在通货膨胀率以下。他还提出了建设项目的公开招标程序，他表示这将为多市每年节省2亿多元。</p>
-<p>布拉德福德已在向其他级别政府增加对多伦多某些领域的资金支持，例如渥太华对难民住房需求的财政支持，但他也表示多市需要采取更多措施来改善其财政前景。</p>
-<p><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%82%B9%E8%87%B3%E8%95%99.md#1">邹至蕙</a></strong></p>
+<p>布拉德福德已在向其它级别政府增加对多伦多某些领域的资金支持，例如渥太华对难民住房需求的财政支持，但他也表示多市需要采取更多措施来改善其财政前景。</p>
 <p>邹至蕙表示，将把空置房屋税提高2倍至3%，并用所得收入建造经济适用房；提议提高售价300万元或以上房屋的市政土地转让税。</p>
 <p>邹表示，需“适度”提高地税，但没有提供具体数字。</p>
 <p>邹提出的建造新出租屋计划将严重依赖联邦加拿大房贷与住房公司（CMHC）的资金。</p>
-<p><strong>弗雷</strong></p>
 <p>弗雷承诺，不会征收任何新税。弗雷表示，他将审计多市的支出，以削减“热衷项目”并终止对多市气候变化战略TransformTO的资助。</p>
 <p>弗雷将冻结招聘不从事“核心服务”工作的市政厅工作人员，并承诺结束市政合同的封闭式招标；他将游说联邦政府对城市燃气成本进行碳税退税。</p>
-<p>他还表示，将停止进一步监管毒品消费场所的计划，并将这笔资金重新分配给治疗中心和其他优先事项。</p>
-<p><strong>亨特</strong></p>
+<p>他还表示，将停止进一步监管毒品消费场所的计划，并将这笔资金重新分配给治疗中心和其它优先事项。</p>
 <p>亨特计划，上涨2024年和2025年地税6%，即明年普通家庭涨地税约216元。然而，对于年收入低于8万元的中低收入房主来说，地税增幅将为3%。</p>
 <p>亨特表示，她将领导一个安省市长联盟，推动省或联邦政府将统一销售税（HST）收入的1%用于新的市政转移支付，这将为多伦多提供8亿元。</p>
 <p>或者，她会游说安省将教育财产税削减50%，每年为多伦多带来约10亿元收入。</p>
-<p><strong>马特洛</strong></p>
 <p>马特洛表示，通过涨地税带来额外的收入来源，并通过有针对性的支出削减来提供资金。</p>
 <p>他表示，征新地税，将使大多数房主每年花费约67元，并在5年内产生约3.9亿元的收入，将为改善基本服务提供资金。</p>
 <p>马特洛提议将多伦多11.6亿元的警察预算冻结3年，以增加对社会项目的资助。</p>
-<p><strong>桑德斯</strong></p>
 <p>桑德斯表示，将通过削减支出来筹集资金。他承诺，将地税增幅保持在或低于通货膨胀率。</p>
-<p>其更多资金不源细节将在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%95%E7%A5%A8.md#1">投票</a>日之前公布。</p>
+<p>其更多资金及成本细节将在投票日之前公布。</p>
 <h2>住房</h2>
 <p><strong>贝劳</strong></p>
 <p>贝劳表示，她将通过重新规划道路来鼓励人口密集化，允许建造8至10层的公寓楼（无需特别许可），建造专门的出租房，并将市属多余房产用于非营利性和合作住房。</p>
@@ -52,38 +45,31 @@
 <p>弗雷致力于创建一个“值得信赖的房东”登记处，以加快工作审批速度。</p>
 <p><strong>亨特</strong></p>
 <p>亨特的计划将包括成立一个新的多伦多经济适用住房公司，以释放公共土地建造新屋。亨特承诺在她上任后6年内将在公共土地上建造108个新开发项目。</p>
-<p>将允许在主要街道以及大学和学院校园附近建造最多8层的出租公寓，同时加快建筑许可审批。；加快巷道屋和花园套房的标准化设计审批，并消除流程中成本高昂的部分。</p>
+<p>将允许在主要街道以及大学和学院校园附近建造最多8层的出租公寓，同时加快建筑许可审批。加快巷道屋和花园套房的标准化设计审批，并消除流程中成本高昂的部分。</p>
 <p><strong>马特洛</strong></p>
-<p>马特洛已为多伦多公共建设公司（PublicBuildToronto）投资3亿元，这是一家新机构，负责在TTC停车场等城市拥有的土地上开发住房。该机构将聘请建筑商，并与非营利组织合作，提供价格低廉、租金与收入挂钩、价格合理的住房，以及有房租管控的市价单元。</p>
+<p>马特洛已为多伦多公共建设公司（Public Build Toronto）投资3亿元，这是一家新机构，负责在TTC停车场等城市拥有的土地上开发住房。该机构将聘请建筑商，并与非营利组织合作，提供价格低廉、租金与收入挂钩、价格合理的住房，以及有房租管控的市价单元。</p>
 <p>将加快经济适用房的申请，批准在指定道路上建造9层建筑。</p>
 <p><strong>桑德斯</strong></p>
 <p>桑德斯表示，他将通过加快审批速度来建造更多住房，部分方法是消除市政厅的“筒仓”并将更多流程数字化。他还引入了一个系统来跟踪建筑商的表现。</p>
 <p>桑德斯承诺，对于售价130万元或以下的房产，首次购房者将取消市政土地转让税。</p>
 <p>桑德斯更广泛的住房计划，还包括呼吁联邦和省政府扩大技工移民，以增加多市的建筑劳动力。</p>
 <h2>公交系统</h2>
-<p><strong>贝劳</strong></p>
-<p>贝劳致力于扭转最近TTC服务削减的趋势，同时专注于提高公交系统的可靠性和清洁度。她表示，她还在车站雇佣更多TTC工作人员。</p>
+<p>贝劳致力于扭转最近TTC服务削减的趋势，同时专注于提高公交系统的可靠性和清洁度。她表示，她还在车站雇用更多TTC工作人员。</p>
 <p>贝劳承诺资助并加快快速公交网络的设计，以取代今年晚些时候关闭的士嘉堡轻轨（SRT）。</p>
 <p>贝劳承诺把501路街车和士嘉堡SRT改线的单程票价降低至2元。</p>
-<p><strong>布拉德福德</strong></p>
 <p>布拉德福德表示，将为地铁网络上的所有TTC乘客提供手机服务。</p>
-<p>他表示，作为市长，他将避免像埃格林顿跨城项目那样的延误，并追究相关负责人的责任。</p>
+<p>他表示，作为市长，他将避免像Eglinton跨城轻轨（Eglinton Crosstown）项目那样的延误，并追究相关负责人的责任。</p>
 <p>他还支持安大略线、Eglinton东轻轨、海滨轻轨以及Sheppard地铁东线和西线延伸线的建设。</p>
-<p><strong>邹至蕙</strong></p>
 <p>邹至蕙表示，将扭转最近TTC服务削减的做法，冻结涨票价，增加车站工作人员，并让所有地铁乘客用上手机服务。</p>
-<p>为了取代士嘉堡SRT，邹提出了一条公交专用道，让公交车在从Kennedy路至Ellesmere路的专用道路上上运行，该段路之前由SRT行驶，这样每天最多为乘客节省20分钟。</p>
+<p>为了取代士嘉堡SRT，邹提出了一条公交专用道，让公交车在从Kennedy路至Ellesmere路的专用道路上运行，该段路之前由SRT行驶，这样每天最多为乘客节省20分钟。</p>
 <p>邹还将专注于确保士嘉堡地铁延伸线和Eglinton东轻轨线按时交付。</p>
-<p><strong>弗雷</strong></p>
 <p>弗雷表示，在Eglinton跨城线和安大略线竣工之前，他将阻止任何新的大型公共交通项目的开工。安大略线预计于2031年竣工。</p>
-<p>他承诺，就Eglinton跨城轻轨（Eglinton Crosstown）延误问题起诉都会联通和安省，诉讼所得的任何收益都将捐给Eglinton大道沿线的商家。</p>
-<p><strong>亨特</strong></p>
+<p>他承诺，就Eglinton跨城轻轨延误问题起诉都会联通和安省，诉讼所得的任何收益都将捐给Eglinton大道沿线的商家。</p>
 <p>亨特提议扩建Sheppard地铁（4号线），以连接东部即将建成的士嘉堡地铁延伸线和西部1号线的SheppardWest站。</p>
 <p>她还将倡导安省在央街北地铁延伸线的5个站点上增设Cummer站。</p>
 <p>亨特表示，其交通计划将扭转最近TTC票价上涨和服务削减的问题，老年人和残疾人乘客可以免费使用公交系统。每周六天，地铁服务将于早上5点30提早半小时开始运营。</p>
-<p><strong>马特洛</strong></p>
 <p>马特洛表示，他将继续推进拟议的Eglinton东轻轨线路；将把士嘉堡SRT使用的独立道路改造成快速公交专用道。</p>
 <p>他承诺，将TTC服务恢复到疫情前水平，并将折扣票价范围扩大到所有老年人，同时将车票降低至2.10元。</p>
-<p><strong>桑德斯</strong></p>
 <p>桑德斯承诺，废除King街交通优先通道，该道路限制车辆交通且以街车和自行车优先。</p>
 <p>他表示，将努力加快Sheppard地铁（4号线）向东延伸至士嘉堡McCowan路，向西延伸至与1号线SheppardWest站相连。</p>
 <p>桑德斯建议，老年人每周一上午10点至下午3点免费乘坐TTC，并且让他们可以在非高峰时段，可以更方便地下车。</p>
@@ -113,52 +99,42 @@
 <p>他表示，将把TTC巡逻乘警人数增加2倍，达到至少200人，并将他们纳入多伦多警察局，同时在交通网络上安装更多安全摄像头。</p>
 <p>桑德斯提议，增加流动危机应对小组的数量，以便为陷入危机的居民和公园营地的居民提供24/7支持；承诺在城市拥有的建筑中，为已经提供成瘾服务的非营利组织提供免费空间。◇</p>
 <p>责任编辑：文芳</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997020.md#1">温哥华华裔曝光家人遭大陆公安威胁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13998428.md#1">多伦多上百人竞争市长职位 目前六人领先</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019286.md#1">多伦多市长补选还剩1周 投票须知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021172.md#1">报告：政府福利有助加国低收入家庭正常消费</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021161.md#1">约克区警方警告居民不要相信来电显示</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021150.md#1">大学毕业游德国 加国华裔女孩被推落深谷坠亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021160.md#1">滑铁卢-宾顿市新增GO巴士服务本周六开通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021112.md#1">今年秋天 连体字在安省学校将成必修课</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021128.md#1">安省宣布将升级大风湖省立公园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021109.md#1">畅销书作家在多伦多被加航拒登机 亲子旅行被毁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/15/n13997020.md#1">温哥华华裔曝光家人遭大陆公安威胁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/17/n13998428.md#1">多伦多上百人竞争市长职位 目前六人领先</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/20/n14019286.md#1">多伦多市长补选还剩1周 投票须知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309991.md#1">纳税人联盟呼吁安省永久削减汽油税</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309985.md#1">固特异斥资5.75亿扩建安省工厂 生产电动汽车轮胎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309976.md#1">研究发现：加拿大住房危机 留学生深受影响</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309956.md#1">18岁男子警局停车场昏睡 被控不清醒驾驶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309322.md#1">抗议房租持续上涨 多伦多租客罢租越来越普遍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309319.md#1">万尺高空跳伞庆生 安省80岁老妪与闺蜜圆梦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309308.md#1">多伦多要求省府为未来两条公交线连接买单</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/6/n10894661.md#1" target="_blank">林傲霜：为了活命的冒险——瞒产私分</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018137.md#1">斯里兰卡男童转生佛教家庭 知前世为基督徒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/16/n14017550.md#1">美国民众目击报告：F-16战机与UFO缠斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014437.md#1">古代不贺夏至  节俗中蕴含什么深机？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14013202.md#1">端午节九大风俗 内涵与历史渊源知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014582.md#1">刘备占蜀地是天意 孙权身边异士透天机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021045.md#1">【舞蹈】飞天大学2023第一学期舞蹈考试（高班 女生）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020978.md#1">【新闻看点】拜登为何奚落习近平 历史会重演？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14021122.md#1">【环球直击】莫迪抵华府 美印加速合作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020038.md#1">二十大前受狙击 陈敏尔失势被指受大秘牵连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020509.md#1">美中关系再起波澜 “独裁者”称号惹急战狼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14019964.md#1">【翻墙必看】李强出访半途 已发生不少异象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019849.md#1">佟大为常年吃水煮菜显老态 被关悦管太严惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020832.md#1">谣传假视障 萧煌奇摘墨镜自清：愿世人保持良善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14019911.md#1">唐嫣谈夫妻相处模式：因拍戏分居格外珍惜相聚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020674.md#1">受黄子佼性骚扰风波影响 孟耿如无奈请辞新戏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14019986.md#1">泰勒丝宣布2024国际巡回演唱 首站日本东京</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020205.md#1">如何赶走苍蝇？ 专家分享省钱的天然方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019279.md#1">老中医：50岁以上如何预防心血管病和骨质疏松</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020569.md#1">小苏打洗衣2个简单配方 令夏季衣物清洁无异味</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019719.md#1">生酮饮食饿死癌细胞但有副作用 专家：1方法能翻转</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14019213.md#1">抽筋是因为缺钙？这5个症状可能是缺镁 5类食物补镁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/23/n14021241.htm">多伦多市长补选 七位候选人有哪些承诺？</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021241.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/23/n14021241.htm">多伦多市长补选 七位候选人有哪些承诺？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/23/n14021241.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
